Add fs and https dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd backend && npm start"
+    "start": "cd backend && node server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
