--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && (cd ../backend && npm install)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
