--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -12,14 +13,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "konva": "^9.3.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.26.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
